# Shieldy-CPP-example

./: .gitignore  CMakeLists.txt  CppShieldyExampleWinApi.rar  Crypt32.Lib  bcrypt.lib  board.h  main.cpp  shieldy_api.cpp  shieldy_api.h  shieldy_cpp_api.cpp  shieldy_cpp_api.h
game/: board.cpp
libraries/: ChaCha20-Poly1305.cpp  ChaCha20-Poly1305.hpp  ecdh.c  ecdh.h  ecdh_utils.h  sha256.cpp  sha256.h
old/: shieldy_cpp_api.cpp  shieldy_cpp_api.h
